--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Portal Gun</string>
+    <string name="gender_title">Gender:</string>
+    <string name="location_title">Location:</string>
+    <string name="status_title">Status:</string>
+    <string name="origin_title">Origin:</string>
+    <string name="character_photo_content_description">Character photo</string>
 </resources>
