--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="status_title">Status:</string>
     <string name="origin_title">Origin:</string>
     <string name="character_photo_content_description">Character photo</string>
+    <string name="episodes">Episodes</string>
 </resources>
