--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="origin_title">Origin:</string>
     <string name="character_photo_content_description">Character photo</string>
     <string name="episodes">Episodes</string>
+    <string name="content_desc_character_image">character image</string>
 </resources>
